(+) Information in entry form if a field is administrative

--- a/Site/usr/templates/default4/css/theme.less
+++ b/Site/usr/templates/default4/css/theme.less
@@ -584,6 +584,7 @@ body.modal-open {
 		color: @font-color;
 
 		&.above { margin-top: 10px; }
+		&.administrative { color: red;}
 	}
 	.well {
 		box-shadow: none;
