--- a/Site/usr/templates/default4/themes/pastels.less
+++ b/Site/usr/templates/default4/themes/pastels.less
@@ -27,7 +27,7 @@
 @activetext-color: #ffffff;
 //@font-color: #414243;
 @alert-color: #94dbae;
-@important-color: #3A6B61;
+@important-color: #3a6b61;
 @background-light: #f8f1dc;
 @background-medium: #e9d4b4;
 @background-dark: #f6bd97;
