--- a/Site/usr/templates/default4/themes/cornfield.less
+++ b/Site/usr/templates/default4/themes/cornfield.less
@@ -25,6 +25,7 @@
 @basetext-color: #521b00;
 @active-color: #6b1e00;
 @activetext-color: #ffcd47;
+@link-color: #6b1e00;
 @alert-color: #ffb866;
 @important-color: #b64a21;
 @background-light: #fff8e4;
