--- a/Site/usr/templates/default4/themes/cornflower.less
+++ b/Site/usr/templates/default4/themes/cornflower.less
@@ -25,6 +25,7 @@
 @basetext-color: #ffffff;
 @active-color: #0258a4;
 @activetext-color: #ffffff;
+@link-color: #0258a4;
 @alert-color: #ffdc64;
 @important-color: #6e5501;
 @background-light: #f6fbfe;
