--- a/Site/usr/templates/default4/themes/malva.less
+++ b/Site/usr/templates/default4/themes/malva.less
@@ -25,6 +25,7 @@
 @basetext-color: #ffffff;
 @active-color: #552768;
 @activetext-color: #ffffff;
+@link-color: #552768;
 @alert-color: #d1d1ef;
 @important-color: #3f3fb4;
 @background-light: #f8effb;
