--- a/Site/usr/templates/default4/themes/pastels.less
+++ b/Site/usr/templates/default4/themes/pastels.less
@@ -25,6 +25,7 @@
 @basetext-color: #ffffff;
 @active-color: #a5594c;
 @activetext-color: #ffffff;
+@link-color: #a5594c;
 //@font-color: #414243;
 @alert-color: #94dbae;
 @important-color: #3a6b61;
