--- a/Site/usr/templates/default4/themes/poppyseed.less
+++ b/Site/usr/templates/default4/themes/poppyseed.less
@@ -25,6 +25,7 @@
 @basetext-color: #ffffff;
 @active-color: #222222;
 @activetext-color: #ffffff;
+@link-color: #222222;
 @alert-color: #fce1d5;
 @important-color: #f0400a;
 @background-light: #f2f2f2;
