--- a/Site/usr/templates/default4/themes/terra.less
+++ b/Site/usr/templates/default4/themes/terra.less
@@ -25,6 +25,7 @@
 @basetext-color: #ffffff;
 @active-color: #472300;
 @activetext-color: #ffffff;
+@link-color: #472300;
 @alert-color: #fbc41f;
 @important-color: #a83000;
 @background-light: #fce5cf;
