--- a/Site/usr/templates/default4/themes/meadow.less
+++ b/Site/usr/templates/default4/themes/meadow.less
@@ -25,6 +25,7 @@
 @basetext-color: #ffffff;
 @active-color: #2d5a26;
 @activetext-color: #ffffff;
+@link-color: #2d5a26;
 @alert-color: #fce26e;
 @important-color: #907603;
 @background-light: #e8fae5;
