--- a/Site/usr/templates/default4/themes/roses.less
+++ b/Site/usr/templates/default4/themes/roses.less
@@ -25,6 +25,7 @@
 @basetext-color: #ffffff;
 @active-color: #9c1a16;
 @activetext-color: #ffffff;
+@link-color: #9c1a16;
 @alert-color: #81ec76;
 @important-color: #03741c;
 @background-light: #fff1f1;
