--- a/Site/usr/templates/default4/themes/sobipro.less
+++ b/Site/usr/templates/default4/themes/sobipro.less
@@ -25,6 +25,7 @@
 @basetext-color: #ffffff;
 @active-color: #000066;
 @activetext-color: #ffffff;
+@link-color: #000066;
 @alert-color: #e7e7e7;
 @important-color: #fe4426;
 @background-light: #fbeeee;
