--- a/Site/usr/templates/default4/themes/waterfall.less
+++ b/Site/usr/templates/default4/themes/waterfall.less
@@ -25,6 +25,7 @@
 @basetext-color: #ffffff;
 @active-color: #028482;
 @activetext-color: #ffffff;
+@link-color: #028482;
 @alert-color: #fce3e3;
 @important-color: #ef0c0c;
 @background-light: #e8fefe;
