(+) new template colour @link-color
	(!) Improvement of template style 'elevated'
	(!) Improvement of all colour themes
	(!) Default template version V4.1

--- a/Site/usr/templates/default4/themes/cornfield.less
+++ b/Site/usr/templates/default4/themes/cornfield.less
@@ -1,11 +1,11 @@
-// @package: SobiPro Component for Joomla!
+// @package: Default Template V4 for SobiPro Component for Joomla!
 
 // @author
 // Name: Sigrid Suski & Radek Suski, Sigsiu.NET GmbH
 // Email: sobi[at]sigsiu.net
 // Url: https://www.Sigsiu.NET
 
-// @copyright Copyright (C) 2006 - 2017 Sigsiu.NET GmbH (https://www.sigsiu.net). All rights reserved.
+// @copyright Copyright (C) 2006 - 2018 Sigsiu.NET GmbH (https://www.sigsiu.net). All rights reserved.
 // @license GNU/GPL Version 3
 // This program is free software: you can redistribute it and/or modify it under the terms of the GNU General Public License version 3
 // as published by the Free Software Foundation, and under the additional terms according section 7 of GPL v3.
@@ -21,13 +21,13 @@
 // @activetext-color on active-color
 // @important-color on @alert-color
 
-@base-color: #ffc119;
-@basetext-color: #521b00;
-@active-color: #6b1e00;
-@activetext-color: #ffcd47;
-@link-color: #6b1e00;
+@base-color: #6b1e00; //#ffc119;
+@basetext-color: #fcd365; //#521b00;
+@active-color: #ffcd47; //#6b1e00;
+@activetext-color: #6b1e00; //#ffcd47;
+@link-color: #521b00;
 @alert-color: #ffb866;
 @important-color: #b64a21;
-@background-light: #fff8e4;
+@background-light: #fceec8;
 @background-medium: #ffe8a9;
 @background-dark: #ffd258;
