--- a/Site/usr/templates/default4/themes/pastels.less
+++ b/Site/usr/templates/default4/themes/pastels.less
@@ -1,11 +1,11 @@
-// @package: SobiPro Component for Joomla!
+// @package: Default Template V4 for SobiPro Component for Joomla!
 
 // @author
 // Name: Sigrid Suski & Radek Suski, Sigsiu.NET GmbH
 // Email: sobi[at]sigsiu.net
 // Url: https://www.Sigsiu.NET
 
-// @copyright Copyright (C) 2006 - 2017 Sigsiu.NET GmbH (https://www.sigsiu.net). All rights reserved.
+// @copyright Copyright (C) 2006 - 2018 Sigsiu.NET GmbH (https://www.sigsiu.net). All rights reserved.
 // @license GNU/GPL Version 3
 // This program is free software: you can redistribute it and/or modify it under the terms of the GNU General Public License version 3
 // as published by the Free Software Foundation, and under the additional terms according section 7 of GPL v3.
@@ -21,13 +21,12 @@
 // @activetext-color on active-color
 // @important-color on @alert-color
 
-@base-color: #d19846;
+@base-color: #dd8e1d;
 @basetext-color: #ffffff;
 @active-color: #a5594c;
 @activetext-color: #ffffff;
-@link-color: #a5594c;
-//@font-color: #414243;
-@alert-color: #94dbae;
+@link-color: #a83825;
+@alert-color: #c3f6d6;
 @important-color: #3a6b61;
 @background-light: #f8f1dc;
 @background-medium: #e9d4b4;
