--- a/Site/usr/templates/default4/themes/waterfall.less
+++ b/Site/usr/templates/default4/themes/waterfall.less
@@ -1,11 +1,11 @@
-// @package: SobiPro Component for Joomla!
+// @package: Default Template V4 for SobiPro Component for Joomla!
 
 // @author
 // Name: Sigrid Suski & Radek Suski, Sigsiu.NET GmbH
 // Email: sobi[at]sigsiu.net
 // Url: https://www.Sigsiu.NET
 
-// @copyright Copyright (C) 2006 - 2017 Sigsiu.NET GmbH (https://www.sigsiu.net). All rights reserved.
+// @copyright Copyright (C) 2006 - 2018 Sigsiu.NET GmbH (https://www.sigsiu.net). All rights reserved.
 // @license GNU/GPL Version 3
 // This program is free software: you can redistribute it and/or modify it under the terms of the GNU General Public License version 3
 // as published by the Free Software Foundation, and under the additional terms according section 7 of GPL v3.
@@ -26,8 +26,8 @@
 @active-color: #028482;
 @activetext-color: #ffffff;
 @link-color: #028482;
-@alert-color: #fce3e3;
-@important-color: #ef0c0c;
+@alert-color: #ffe4e4;
+@important-color: #e10404;
 @background-light: #e8fefe;
-@background-medium: #bafbfb;
-@background-dark: #76f3fc;
+@background-medium: #b5f7fc;
+@background-dark: #76eefc;
