--- a/Site/usr/templates/default4/css/theme.less
+++ b/Site/usr/templates/default4/css/theme.less
@@ -1,4 +1,4 @@
-/* @package: SobiPro Component for Joomla! */
+/* @package: Default Template V4 for SobiPro Component for Joomla! */
 /**/
 // @author
 /* Authors: Sigrid Suski & Radek Suski, Sigsiu.NET GmbH */
@@ -46,9 +46,9 @@
 // fallback to sobipro layout
 @base-color: #993333;
 @basetext-color: #ffffff;
-@active-color: #000066;     // Background Colour
+@active-color: #000066; // Background Colour
 @activetext-color: #ffffff; // Text on active colour
-@link-color: #000066;       // Colour for links, text
+@link-color: #000066; // Colour for links, text
 @alert-color: #e7e7e7;
 @important-color: #fe4426;
 @background-light: #fbeeee;
@@ -529,7 +529,7 @@ body.modal-open {
 	// ----------------------------------------
 	a:hover,
 	a:focus {
-		color: darken(@active-color, 10%);
+		color: darken(@link-color, 10%);
 	}
 
 	//Redefine standard Bootstrap btn link colours
@@ -608,6 +608,7 @@ body.modal-open {
 	.badge-sigsiu {
 		color: @basetext-color !important;
 		background-color: lighten(@base-color, 5%);
+		text-shadow: none;
 	}
 
 	// Tables
@@ -615,14 +616,23 @@ body.modal-open {
 
 	.table {
 		font-size: @fontsize;
-		th,
-		td {
+		&.table-sigsiu th,
+		&.table-sigsiu td {
 			.borders(medium);
 		}
-		th {
+		&.table-sigsiu th {
 			.background(dark);
-			color: @basetext-color;
+			color: darken(@base-color,10%);
+			& when (@design = elevated) {
+				font-variant: small-caps;
+				font-size: calc(@fontsize + 1px);
+				font-weight: 500;
+			}
 		}
+		& when (@design = elevated) {
+			.shadow-2dp;
+		}
+
 		// with class .sigsiu
 		tbody > tr.sigsiu td,
 		tbody > tr.sigsiu th,
@@ -639,8 +649,15 @@ body.modal-open {
 			tfoot > tr > th,
 			thead > tr > td,
 			thead > tr > th {
-				//border: 1px solid darken(@background-medium, 9%);
 				border-radius: 0;
+			}
+			&.table-sigsiu tbody > tr > td,
+			&.table-sigsiu tbody > tr > th,
+			&.table-sigsiu tfoot > tr > td,
+			&.table-sigsiu tfoot > tr > th,
+			&.table-sigsiu thead > tr > td,
+			&.table-sigsiu thead > tr > th {
+				border: 1px solid darken(@background-medium, 9%);
 				.borders(medium);
 			}
 			thead:first-child tr:first-child > th:first-child,
@@ -667,10 +684,10 @@ body.modal-open {
 
 		// Striped table
 		&.table-striped {
-			tbody > tr:nth-of-type(2n+1) {
-				//background-color: #f9f9f9;
+			&.table-sigsiu tbody > tr:nth-of-type(2n+1) {
+				background-color: #f9f9f9;
 			}
-			tbody > tr:nth-child(2n+1) > td {
+			&.table-sigsiu tbody > tr:nth-child(2n+1) > td {
 				.background(light);
 			}
 			// for class .sigsiu
@@ -680,8 +697,8 @@ body.modal-open {
 			tbody > tr th.sigsiu {
 				.background(medium);
 			}
-			&.table-hover { //standard
-				tbody > tr:nth-child(2n+1):hover > td {
+			&.table-hover {
+				&.table-sigsiu tbody > tr:nth-child(2n+1):hover > td {
 					background-color: darken(@background-light, 5%);
 				}
 			}
@@ -704,7 +721,7 @@ body.modal-open {
 				border-right-style: solid;
 				border-right-width: 1px;
 			}
-			tbody > tr > td:nth-child(2n+1) {
+			&.table-sigsiu tbody > tr > td:nth-child(2n+1) {
 				.background(light);
 			}
 			thead > tr > th {
@@ -717,8 +734,8 @@ body.modal-open {
 			tbody > tr th.sigsiu {
 				.background(medium);
 			}
-			&.table-hover { //standard
-				tbody > tr > td:nth-child(2n+1):hover {
+			&.table-hover {
+				&.table-sigsiu tbody > tr > td:nth-child(2n+1):hover {
 					background-color: darken(@background-light, 5%);
 				}
 			}
@@ -731,12 +748,18 @@ body.modal-open {
 				}
 			}
 		}
-		td a {
-			color: @basetext-color;
+		&.table-sigsiu td a {
+			color: @link-color;
 			&.active,
 			&:hover,
 			&:focus {
-				color: @basetext-color;
+				color: @link-color;
+			}
+		}
+		td a {
+			&.active,
+			&:hover,
+			&:focus {
 				text-decoration: underline;
 			}
 		}
@@ -746,11 +769,18 @@ body.modal-open {
 	// ------------------------
 	.panel-sigsiu {
 		.borders(dark);
+		& when (@design = elevated) {
+			.shadow-2dp;
+		}
 
 		.panel-heading {
 			.background(dark);
 			.borders(dark);
 			color: white;
+			& when (@design = elevated) {
+				font-variant: small-caps;
+				font-weight: 500;
+			}
 			font-size: calc(@fontsize + 2px);
 			h1 {
 				font-size: calc(@fontsize + 8px);
@@ -765,10 +795,10 @@ body.modal-open {
 		.panel-title,
 		.panel-title a:visited,
 		.panel-title a {
-			color: @basetext-color;
+			color: darken(@base-color,10%);
 		}
 		.panel-title a:hover {
-			color: darken(@basetext-color, 5%);
+			color: darken(@base-color, 15%);
 			text-decoration: underline;
 		}
 		.panel-footer {
@@ -777,6 +807,10 @@ body.modal-open {
 		}
 	}
 	.panel-heading {
+		& when (@design = elevated) {
+			font-variant: small-caps;
+			font-weight: 500;
+		}
 		font-size: calc(@fontsize + 2px);
 		h1 {
 			font-size: calc(@fontsize + 8px);
@@ -876,7 +910,7 @@ body.modal-open {
 	// Headers
 	// -----------------------------------------------
 	h1 {
-		color: @basetext-color;
+		color: @link-color;
 		font-size: calc(@fontsize + 12px);
 		line-height: 1.1;
 		margin-top: 0.67em;
@@ -885,7 +919,7 @@ body.modal-open {
 		margin: 0 0 5px 0;
 	}
 	h2 {
-		color: @basetext-color;
+		color: @link-color;
 		font-size: calc(@fontsize + 10px);
 	}
 	h3 {
@@ -1444,7 +1478,7 @@ body.modal-open {
 		.close {
 			position: relative;
 			top: -2px;
-			right: -21px;
+			right: 0;
 			line-height: 18px;
 			cursor: pointer;
 		}
@@ -1477,7 +1511,7 @@ body.modal-open {
 	}
 	.alert-sigsiu,
 	.alert-sigsiu h4 {
-		color: @link-color;
+		color: @base-color;
 	}
 
 	.spAlert {
@@ -1499,9 +1533,6 @@ body.modal-open {
 	//}
 	.spMessage {
 		margin-top: 10px;
-		.close {
-			right: 0;
-		}
 	}
 
 	//simulate default alert-danger, used by SobiPro apps instead of alert-message
@@ -1544,7 +1575,7 @@ body.modal-open {
 	.spSearch .alert-info {
 		border-color: @alert-color;
 		background-color: lighten(@alert-color, 5%);
-		color: @link-color;
+		color: @base-color;
 		& when (@design = elevated) {
 			border-color: lighten(@alert-color, 5%);
 			.shadow-2dp;
@@ -1958,6 +1989,9 @@ body.modal-open {
 			height: calc(@big-image * @image-ratio);
 			font-size: calc((@big-image * 6) / 10);
 		}
+		& when (@design = elevated) {
+			.shadow-2dp;
+		}
 	}
 
 	.spNoImageContainer {
@@ -2003,12 +2037,21 @@ body.modal-open {
 			}
 		}
 	}
-
+	& when (@design = elevated) {
+		.tab-content {
+			.shadow-2dp;
+		}
+	}
 	.nav-pills a:focus,
 	.nav-tabs a:focus {
 		outline: none;
 	}
 
+	& when (@design = elevated) {
+		.nav-tabs {
+			border-bottom-style: hidden;
+		}
+	}
 	.nav-tabs > li > a {
 		& when (@corners = angular) {
 			border-radius: 0;
@@ -2016,10 +2059,11 @@ body.modal-open {
 	}
 
 	// Coloured tabs
-	.tab-content.tabs.coloured .tab-pane {
-		margin-top: 0;
+	& when (@design = standard) {
+		.tab-content.tabs.coloured .tab-pane {
+			margin-top: 0;
+		}
 	}
-
 	.tab-content.tabs.coloured .tab-pane.active {
 		border-top-left-radius: 0;
 	}
@@ -2054,7 +2098,7 @@ body.modal-open {
 		.background(medium);
 		color: @link-color;
 		border-bottom: 2px solid @active-color;
-		top: 20px;
+		top: 16px;
 	}
 
 	.tab-content.pills.staples .tab-pane {
@@ -2086,7 +2130,7 @@ body.modal-open {
 
 	.nav-pills.staples > li.active::before,
 	.nav-pills.staples > li.active::after {
-		top: 20px;
+		top: 17px;
 		content: '';
 		position: absolute;
 		width: 0;
@@ -2619,11 +2663,11 @@ body.modal-open {
 	}
 
 	.carousel-control.right {
-		background-image: linear-gradient(to right, transparent 0, rgba(red(@active-color), green(@active-color), blue(@active-color), 0.5) 100%);
+		background-image: linear-gradient(to right, transparent 0, rgba(red(@link-color), green(@link-color), blue(@link-color), 0.5) 100%);
 	}
 
 	.carousel-control.left {
-		background-image: linear-gradient(to right, rgba(red(@active-color), green(@active-color), blue(@active-color), 0.5) 0, transparent 100%);
+		background-image: linear-gradient(to right, rgba(red(@link-color), green(@link-color), blue(@link-color), 0.5) 0, transparent 100%);
 	}
 
 	// Support for Font Awesome 3 and 4
@@ -2849,16 +2893,16 @@ body.modal-open {
 	.spCalEntry.label-info {
 		background-color: lighten(@alert-color, 4%);
 		border: 1px solid darken(@alert-color, 10%);
-		color: @link-color;
+		color: @base-color;
 
 		a {
-			color: @base-color;
+			color: @link-color;
 			text-shadow: none;
 
 			&:hover,
 			&:active,
 			&:focus {
-				color: darken(@base-color, 5%);
+				color: darken(@link-color, 5%);
 			}
 		}
 	}
