--- a/Site/usr/templates/default4/css/tmpl/joostrap.css
+++ b/Site/usr/templates/default4/css/tmpl/joostrap.css
@@ -1,10 +1,10 @@
-/* @package: SobiPro Component for Joomla! */
+/* @package: Default Template V4 for SobiPro Component for Joomla! */
 /* Styles Correction file for Joostrap templates */
 
 /* Authors: Sigrid Suski & Radek Suski, Sigsiu.NET GmbH */
 /* Url: https://www.Sigsiu.NET */
 
-/* @copyright Copyright (C) 2006 - 2017 Sigsiu.NET GmbH (https://www.sigsiu.net). All rights reserved. */
+/* @copyright Copyright (C) 2006 - 2018 Sigsiu.NET GmbH (https://www.sigsiu.net). All rights reserved. */
 /* @license GNU/GPL Version 3 */
 /* This program is free software: you can redistribute it and/or modify it under the terms of the GNU General Public License version 3 */
 /* as published by the Free Software Foundation, and under the additional terms according section 7 of GPL v3. */
