--- a/Site/usr/templates/default4/themes/meadow.less
+++ b/Site/usr/templates/default4/themes/meadow.less
@@ -1,11 +1,11 @@
-// @package: SobiPro Component for Joomla!
+// @package: Default Template V4 for SobiPro Component for Joomla!
 
 // @author
 // Name: Sigrid Suski & Radek Suski, Sigsiu.NET GmbH
 // Email: sobi[at]sigsiu.net
 // Url: https://www.Sigsiu.NET
 
-// @copyright Copyright (C) 2006 - 2017 Sigsiu.NET GmbH (https://www.sigsiu.net). All rights reserved.
+// @copyright Copyright (C) 2006 - 2018 Sigsiu.NET GmbH (https://www.sigsiu.net). All rights reserved.
 // @license GNU/GPL Version 3
 // This program is free software: you can redistribute it and/or modify it under the terms of the GNU General Public License version 3
 // as published by the Free Software Foundation, and under the additional terms according section 7 of GPL v3.
@@ -27,7 +27,7 @@
 @activetext-color: #ffffff;
 @link-color: #2d5a26;
 @alert-color: #fce26e;
-@important-color: #907603;
+@important-color: #8d5f03;
 @background-light: #e8fae5;
 @background-medium: #c8f3c1;
 @background-dark: #78d269;
