--- a/Site/usr/templates/default4/themes/terra.less
+++ b/Site/usr/templates/default4/themes/terra.less
@@ -1,11 +1,11 @@
-// @package: SobiPro Component for Joomla!
+// @package: Default Template V4 for SobiPro Component for Joomla!
 
 // @author
 // Name: Sigrid Suski & Radek Suski, Sigsiu.NET GmbH
 // Email: sobi[at]sigsiu.net
 // Url: https://www.Sigsiu.NET
 
-// @copyright Copyright (C) 2006 - 2017 Sigsiu.NET GmbH (https://www.sigsiu.net). All rights reserved.
+// @copyright Copyright (C) 2006 - 2018 Sigsiu.NET GmbH (https://www.sigsiu.net). All rights reserved.
 // @license GNU/GPL Version 3
 // This program is free software: you can redistribute it and/or modify it under the terms of the GNU General Public License version 3
 // as published by the Free Software Foundation, and under the additional terms according section 7 of GPL v3.
@@ -23,11 +23,11 @@
 
 @base-color: #764719;
 @basetext-color: #ffffff;
-@active-color: #472300;
+@active-color: #532901;
 @activetext-color: #ffffff;
 @link-color: #472300;
 @alert-color: #fbc41f;
 @important-color: #a83000;
-@background-light: #fce5cf;
+@background-light: #f9e2c4;
 @background-medium: #efbc8b;
 @background-dark: #e08c3b;
