(+) new template colour @link-color
	(!) Improvement of template style 'elevated'
	(!) Improvement of all colour themes
	(!) Default template version V4.1

	(#) Backslashes are added prior apostrophe to input field in back-end

--- a/Site/usr/templates/default4/css/theme.less
+++ b/Site/usr/templates/default4/css/theme.less
@@ -1,4 +1,4 @@
-/* @package: SobiPro Component for Joomla! */
+/* @package: Default Template V4 for SobiPro Component for Joomla! */
 /**/
 // @author
 /* Authors: Sigrid Suski & Radek Suski, Sigsiu.NET GmbH */
