--- a/Site/usr/templates/default4/css/theme.less
+++ b/Site/usr/templates/default4/css/theme.less
@@ -46,9 +46,9 @@
 // fallback to sobipro layout
 @base-color: #993333;
 @basetext-color: #ffffff;
-@active-color: #000066;     // Background Colour
+@active-color: #000066; // Background Colour
 @activetext-color: #ffffff; // Text on active colour
-@link-color: #000066;       // Colour for links, text
+@link-color: #000066; // Colour for links, text
 @alert-color: #e7e7e7;
 @important-color: #fe4426;
 @background-light: #fbeeee;
@@ -876,7 +876,7 @@ body.modal-open {
 	// Headers
 	// -----------------------------------------------
 	h1 {
-		color: @basetext-color;
+		color: @base-color;
 		font-size: calc(@fontsize + 12px);
 		line-height: 1.1;
 		margin-top: 0.67em;
@@ -885,7 +885,7 @@ body.modal-open {
 		margin: 0 0 5px 0;
 	}
 	h2 {
-		color: @basetext-color;
+		color: @base-color;
 		font-size: calc(@fontsize + 10px);
 	}
 	h3 {
